[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Hitch-hike/Hitch-hike.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Bender/Jovanny Lemonad - Bender-Black.otf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/ChooseLanguage.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/gui_britan_flag.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/DefaultFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/textures/gui_russian_flag.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/gui_indian_flag.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/HindiFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/fonts/Bender/Jovanny Lemonad - Bender-Italic.otf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 10 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 360.0 ],
"_edit_vertical_guides_": [ 630.0, 650.0, 240.0, 320.0, 960.0, 1040.0, 480.0, 800.0 ]
}

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 1 )
text = "Note Kingdom"
align = 1
valign = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 480.0
margin_top = 360.0
margin_right = 800.0
margin_bottom = 720.0
custom_constants/separation = 32

[node name="PlayButton" type="Button" parent="ButtonsContainer"]
margin_right = 320.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="SettingsButton" type="Button" parent="ButtonsContainer"]
margin_top = 74.0
margin_right = 320.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="CreditsButton" type="Button" parent="ButtonsContainer"]
margin_top = 148.0
margin_right = 320.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 2 )
text = "Credits"

[node name="ExitButton" type="Button" parent="ButtonsContainer"]
margin_top = 222.0
margin_right = 320.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="ChooseLanguage" type="Panel" parent="."]
editor/display_folded = true
margin_top = -1.0
margin_right = 1280.0
margin_bottom = 719.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="ChooseLanguage"]
margin_top = 282.0
margin_right = 1280.0
margin_bottom = 442.0
custom_constants/separation = 8
alignment = 1

[node name="EnglishLanguage" type="TextureButton" parent="ChooseLanguage/HBoxContainer"]
margin_left = 272.0
margin_right = 512.0
margin_bottom = 160.0
rect_min_size = Vector2( 240, 160 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="ChooseLanguage/HBoxContainer/EnglishLanguage"]
margin_top = 160.0
margin_right = 240.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 6 )
text = "English
"
align = 1

[node name="RussianLanguage" type="TextureButton" parent="ChooseLanguage/HBoxContainer"]
margin_left = 520.0
margin_right = 760.0
margin_bottom = 160.0
rect_min_size = Vector2( 240, 160 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="ChooseLanguage/HBoxContainer/RussianLanguage"]
margin_top = 160.0
margin_right = 240.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 6 )
text = "Русский"
align = 1

[node name="HindiLanguage" type="TextureButton" parent="ChooseLanguage/HBoxContainer"]
margin_left = 768.0
margin_right = 1008.0
margin_bottom = 160.0
rect_min_size = Vector2( 240, 160 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="ChooseLanguage/HBoxContainer/HindiLanguage"]
margin_top = 160.0
margin_right = 240.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 9 )
text = "हिन्दी"
align = 1

[node name="Label" type="Label" parent="ChooseLanguage"]
margin_top = 212.0
margin_right = 1280.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 3 )
text = "Choose language:"
align = 1
valign = 1

[connection signal="pressed" from="ButtonsContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ChooseLanguage/HBoxContainer/EnglishLanguage" to="ChooseLanguage" method="_on_EnglishLanguage_pressed"]
[connection signal="pressed" from="ChooseLanguage/HBoxContainer/RussianLanguage" to="ChooseLanguage" method="_on_RussianLanguage_pressed"]
[connection signal="pressed" from="ChooseLanguage/HBoxContainer/HindiLanguage" to="ChooseLanguage" method="_on_HindiLanguage_pressed"]
